mpdparser: corrected getting segment availability

https://bugzilla.gnome.org/show_bug.cgi?id=757655